Fix Mermaid diagram rendering with proper JavaScript includes and pymdown-extensions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,5 +28,12 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
-  - pymdownx.tabbed
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.details
+
+extra_javascript:
+  - https://unpkg.com/mermaid@10.6.0/dist/mermaid.min.js
+
+extra_css:
+  - https://unpkg.com/mermaid@10.6.0/dist/mermaid.min.css
